reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_into-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStructIntoProxy"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStructInto"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestStructInto": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestStructInto",
        "required": [
          "f"
        ],
        "properties": {
          "f": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.serde.TestStructIntoProxy": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestStructIntoProxy",
        "required": [
          "f"
        ],
        "properties": {
          "f": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
